force-app/main/default/objects/Lead/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <label>Projects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspirational</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>AIPL Zen Residences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>