force-app/main/default/objects/Lead/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <label>Purchaser</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>