force-app/main/default/objects/Lead/fields/Ref_Booked_Mob__c.field-meta.xml
<CustomField>
    <fullName>Ref_Booked_Mob__c</fullName>
    <label>Ref_Booked_Mob</label>
    <length>11</length>
    <type>Text</type>
</CustomField>