force-app/main/default/objects/Lead/fields/Ref_Booked_Name__c.field-meta.xml
<CustomField>
    <fullName>Ref_Booked_Name__c</fullName>
    <label>Ref_Booked_Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>