force-app/main/default/objects/Lead/fields/Region_If_city_is_Mumbai__c.field-meta.xml
<CustomField>
    <fullName>Region_If_city_is_Mumbai__c</fullName>
    <label>Region (If city is Mumbai)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Western Suburb</fullName>
            </value>
            <value>
                <fullName>Central Suburb</fullName>
            </value>
            <value>
                <fullName>New Mumbai</fullName>
            </value>
            <value>
                <fullName>South Mumbai</fullName>
            </value>
            <value>
                <fullName>Western Mumbai - Main</fullName>
            </value>
            <value>
                <fullName>Western Mum - BKC</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>Central Mumbai</fullName>
            </value>
            <value>
                <fullName>Eastern Suburbs</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>