force-app/main/default/objects/Lead/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Leads (Sales Rep)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>