force-app/main/default/objects/Lead/fields/SDO_Sales_Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Lead_Quality__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 0, &apos;015Hn000003A8fU&apos;, &apos;015Hn000003A8fV&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 5, &apos;015Hn000003A8fU&apos;, &apos;015Hn000003A8fV&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 10, &apos;015Hn000003A8fU&apos;, &apos;015Hn000003A8fV&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (SDO_Sales_Lead_Total__c &gt; 15, &apos;015Hn000003A8fU&apos;, &apos;015Hn000003A8fV&apos;),&apos;&apos;,24,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>