force-app/main/default/objects/Lead/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit</label>
    <referenceTo>Site_Visit__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>