force-app/main/default/objects/Lead/fields/Society_Charges__c.field-meta.xml
<CustomField>
    <fullName>Society_Charges__c</fullName>
    <label>Society Charges (B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>