force-app/main/default/objects/Lead/fields/Total_Govt_Levies__c.field-meta.xml
<CustomField>
    <fullName>Total_Govt_Levies__c</fullName>
    <formula>Township_Corpus_Fund__c +  Registration_Charges__c + Goods_and_Service_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Govt. Levies incl. GST (C)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>