force-app/main/default/objects/Lead/fields/Total_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Price__c</fullName>
    <formula>Flat_Unit_Cost__c +  Society_Charges__c +  Total_Govt_Levies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sale Price &amp; Govt. Levies (A+B+C)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>