force-app/main/default/objects/Lead/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower(Module)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Module__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tower</value>
        </filterItems>
        <filterItems>
            <field>Module__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Leads (Tower)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>