force-app/main/default/objects/Lead/fields/Tower_Ray__c.field-meta.xml
<CustomField>
    <fullName>Tower_Ray__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower Ray</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>