force-app/main/default/objects/Lead/fields/Township_Corpus_Fund__c.field-meta.xml
<CustomField>
    <fullName>Township_Corpus_Fund__c</fullName>
    <label>Stamp Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>