force-app/main/default/objects/Lead/fields/Type_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Interest__c</fullName>
    <label>Type of Interest</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Interest</valueSetName>
    </valueSet>
</CustomField>