force-app/main/default/objects/Lead/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit(Module)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Module__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Unit</value>
        </filterItems>
        <filterItems>
            <field>Module__c.Tower__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tower__c</valueField>
        </filterItems>
        <filterItems>
            <field>Module__c.Unit_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>