force-app/main/default/objects/Lead/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <label>Unit Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>