force-app/main/default/objects/Lead/validationRules/Project_Costing_Mandatory_for_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Costing_Mandatory_for_Booking</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Lead_Type__c , &apos;Booking&apos;),OR(
ISBLANK( Flat_Unit_Cost__c),ISBLANK( Society_Charges__c),ISBLANK( Unit__c),ISBLANK( Township_Corpus_Fund__c ),ISBLANK( Registration_Charges__c),ISBLANK( Goods_and_Service_Tax__c)
))</errorConditionFormula>
    <errorMessage>Booking requires  &apos;Property Information&apos; and &apos;Costing Details&apos;.
For Enquiry select &apos;Lead Type&apos; as &quot;Enquiry&quot;</errorMessage>
</ValidationRule>