force-app/main/default/objects/Lead/validationRules/Validation_for_Company_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Company_Name</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Purchaser__c , &apos;Individual&apos;), NOT(CONTAINS(Company, LastName))
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>Company Name should contain  Last Name</errorMessage>
</ValidationRule>